media/gpu/v4l2vda: remove faulty DCHECK()

At the end of AssignPictureBuffersTask(), we used to check that the
number of free output buffers was equal to zero, as it was assumed that
they would be awaiting for their EGL image to be assigned. However, if
in allocate mode and rendering is disabled, ImportBufferForPictureTask(),
which is directly called from AssignPictureBuffersTask(), can allow the
buffers to return to the free list. In this case the number of free
buffers will be higher then zero at the end of the loop.

Remove this DCHECK() as it is clearly checking for an invalid condition.

BUG=891600
TEST=Checked that VDA unittest was passing on Hana with rendering both
enabled and disabled.

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I87f3e10656eaa5e15de9a806e7175fb0078ed9cc
Reviewed-on: https://chromium-review.googlesource.com/c/1258685
Reviewed-by: Hirokazu Honda <hiroh@chromium.org>
Reviewed-by: Pawel Osciak <posciak@chromium.org>
Commit-Queue: Alexandre Courbot <acourbot@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598281}
Former-commit-id: 81023e3b363fee7229b5078d116ac451b9f72624